--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,15 @@
     <link rel="stylesheet" type="text/css" href="estilo.css">
 
 </head>
+
 <body>
-    
-    
+
+    <div id="container">
+        <div id="cabecalho">
+            <h1 class="logo">Notícias Cidade</h1>
+        </div>
+    </div>
+
 </body>
+
 </html>
