--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <body class="home">
 
+    <!-- INICIO DO CONTAINER -->
     <div id="container">
+
+        <!-- INICIO DO CABEÇALHO -->
         <div id="cabecalho">
             <h1 class="logo">Notícias Cidade</h1>
             <ul id="navegacao">
@@ -39,6 +42,22 @@
                     <a id="fotos" href="fotos.html">Fotos</a>
                 </li>
             </ul>
+        </div><!-- FIM DO CABEÇALHO -->
+
+        <!-- INICIO DO CONTEÚDO -->
+        <div id="conteudo">
+
+            <div id="primario">Primário</div>
+            <div id="secundario">Secundário</div>
+            <div id="lateral">Lateral</div>
+
+        </div><!-- FIM DO CONTEÚDO -->
+
+    </div><!-- FIM DO CONTAINER -->
+
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            <b>Todos os direitos reservados a Notícias Cidade&copy;</b>
         </div>
     </div>
 
