--- a/internacional.html
+++ b/internacional.html
@@ -42,6 +42,12 @@
         </div>
     </div>
 
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            <b>Todos os direitos reservados a Notícias Cidade&copy;</b>
+        </div>
+    </div>
+
 </body>
 
 </html>
