--- a/saude.html
+++ b/saude.html
@@ -41,7 +41,12 @@
             </ul>
         </div>
     </div>
-
+    
+    <div id="container-rodape" style="clear: both;">
+        <div id="rodape">
+            <b>Todos os direitos reservados a Notícias Cidade&copy;</b>
+        </div>
+    </div>
 </body>
 
 </html>
