Estruturação de Colunas/Páginas
Inclusão da estrutura colunas em cada página do portal.

--- a/fotos.html
+++ b/fotos.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="fotos">
+<body id="uma-coluna" class="fotos">
 
     <div id="container">
         <div id="cabecalho">
@@ -40,6 +40,14 @@
                 </li>
             </ul>
         </div>
+
+        <!-- INICIO DO CONTEÚDO -->
+        <div id="conteudo">
+
+            <div id="primario">Primário</div>
+            
+        </div><!-- FIM DO CONTEÚDO -->
+
     </div>
 
     <div id="container-rodape" style="clear: both;">
