--- a/internacional.html
+++ b/internacional.html
@@ -11,9 +11,12 @@
 
 </head>
 
-<body class="internacional">
+<body id="duas-colunas" class="home">
 
+    <!-- INICIO DO CONTAINER -->
     <div id="container">
+
+        <!-- INICIO DO CABEÇALHO -->
         <div id="cabecalho">
             <h1 class="logo">Notícias Cidade</h1>
             <ul id="navegacao">
@@ -39,8 +42,17 @@
                     <a id="fotos" href="fotos.html">Fotos</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </div><!-- FIM DO CABEÇALHO -->
+
+        <!-- INICIO DO CONTEÚDO -->
+        <div id="conteudo">
+
+            <div id="primario">Primário</div>
+            <div id="lateral">Lateral</div>
+
+        </div><!-- FIM DO CONTEÚDO -->
+
+    </div><!-- FIM DO CONTAINER -->
 
     <div id="container-rodape" style="clear: both;">
         <div id="rodape">
