--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="home">
+<body id="tres-colunas" class="home">
 
     <!-- INICIO DO CONTAINER -->
     <div id="container">
