Correção Class Body
correção das class de cada página.

--- a/economia.html
+++ b/economia.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body id="duas-colunas" class="home">
+<body id="duas-colunas" class="economia">
 
     <!-- INICIO DO CONTAINER -->
     <div id="container">
