--- a/brasil.html
+++ b/brasil.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body id="duas-colunas" class="home">
+<body id="duas-colunas" class="brasil">
 
     <!-- INICIO DO CONTAINER -->
     <div id="container">
