--- a/saude.html
+++ b/saude.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body id="duas-colunas" class="home">
+<body id="duas-colunas" class="saude">
 
     <!-- INICIO DO CONTAINER -->
     <div id="container">
