Inclusão de dados
Inclusão de dados na página inicial e configurações das colunas nas demais páginas.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body id="tres-colunas" class="home">
+<body class="home">
 
     <!-- INICIO DO CONTAINER -->
     <div id="container">
@@ -47,9 +47,106 @@
         <!-- INICIO DO CONTEÚDO -->
         <div id="conteudo">
 
-            <div id="primario">Primário</div>
-            <div id="secundario">Secundário</div>
-            <div id="lateral">Lateral</div>
+            <!-- INICIO DO CONTEÚDO PRIMARIO -->
+            <div id="primario">
+                <div class="caixa">
+                    <h2>Destaque 1</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Destaque 2</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Destaque 3</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Destaque 4</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+            </div><!-- FIM DO CONTEÚDO PRIMARIO -->
+
+            <!-- INICIO DO CONTEÚDO SECUNDARIO -->
+            <div id="secundario">
+                <div class="caixa">
+                    <h2>Noticias Recentes 1</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Noticias Recentes 2</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Noticias Recentes 3</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+            </div><!-- FIM DO CONTEÚDO SECUNDARIO -->
+
+            <!-- INICIO DO CONTEÚDO LATERAL -->
+            <div id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>News</h2>
+                    <!-- <div class="caixa-conteudo">
+                        E-mail:<br>
+                        <input type="text">
+                        <input type="submit" value="Cadastrar">
+                    </div> -->
+                </div>
+
+            </div><!-- FIM DO CONTEÚDO LATERAL -->
 
         </div><!-- FIM DO CONTEÚDO -->
 
