--- a/saude.html
+++ b/saude.html
@@ -47,8 +47,31 @@
         <!-- INICIO DO CONTEÚDO -->
         <div id="conteudo">
 
-            <div id="primario">Primário</div>
-            <div id="lateral">Lateral</div>
+            <!-- INICIO DO CONTEÚDO PRIMARIO -->
+            <div id="primario">
+                <div class="caixa">
+                    <h2>Destaques</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+            </div><!-- FIM DO CONTEÚDO PRIMARIO -->
+
+            <!-- INICIO DO CONTEÚDO LATERAL -->
+            <div id="lateral">
+                <div class="caixa">
+                    <h2>Entrevistas</h2>
+                    <div class="caixa-conteudo">
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                        Conteúdo <br>
+                    </div>
+                </div>
+            </div><!-- FIM DO CONTEÚDO LATERAL -->
 
         </div><!-- FIM DO CONTEÚDO -->
 
