Artigos de Destaque e Entrevistas
Inclusão de material sobre coluna de destaques e entrevistas.

--- a/index.html
+++ b/index.html
@@ -49,38 +49,20 @@
 
             <!-- INICIO DO CONTEÚDO PRIMARIO -->
             <div id="primario">
-                <div class="caixa">
-                    <h2>Destaque 1</h2>
+                <div class="caixa destaque">
+                    <h2>Destaque</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <h3>Nova Legislação</h3>
+                        <img class="imagem-principal" src="./imagens/taxi.jpg" alt="Taxis" width="100%">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        </p>
+                        <a href="">Leia mais!</a>
                     </div>
                 </div>
 
                 <div class="caixa">
-                    <h2>Destaque 2</h2>
-                    <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                    </div>
-                </div>
-
-                <div class="caixa">
-                    <h2>Destaque 3</h2>
-                    <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                    </div>
-                </div>
-
-                <div class="caixa">
-                    <h2>Destaque 4</h2>
+                    <h2>Mundo</h2>
                     <div class="caixa-conteudo">
                         Conteúdo <br>
                         Conteúdo <br>
@@ -93,18 +75,20 @@
 
             <!-- INICIO DO CONTEÚDO SECUNDARIO -->
             <div id="secundario">
-                <div class="caixa">
-                    <h2>Noticias Recentes 1</h2>
+                <div class="caixa entrevista">
+                    <h2>Última Entrevista</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <h3>Entrevista com Felipe Silva</h3>
+                        <img class="imagem-principal" src="./imagens/doutor.jpg" alt="Taxis" width="100%">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        </p>
+                        <a href="">Leia mais!</a>
                     </div>
                 </div>
 
                 <div class="caixa">
-                    <h2>Noticias Recentes 2</h2>
+                    <h2>Notícias Recentes</h2>
                     <div class="caixa-conteudo">
                         Conteúdo <br>
                         Conteúdo <br>
