Lista de Noticias e Mundo
Inclusão de artigos em formato de lista para visualização dentro das colunas de Mundo e Notícias Recentes.

--- a/index.html
+++ b/index.html
@@ -64,10 +64,44 @@
                 <div class="caixa">
                     <h2>Mundo</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
@@ -90,20 +124,44 @@
                 <div class="caixa">
                     <h2>Notícias Recentes</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                    </div>
-                </div>
-
-                <div class="caixa">
-                    <h2>Noticias Recentes 3</h2>
-                    <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/cidade.jpg" alt="cidade" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/doutor.jpg" alt="doutor" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/mundo.jpg" alt="mundo" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/taxi.jpg" alt="taxi" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
 
