--- a/economia.html
+++ b/economia.html
@@ -49,28 +49,115 @@
 
             <!-- INICIO DO CONTEÚDO PRIMARIO -->
             <div id="primario">
-                <div class="caixa">
-                    <h2>Destaques</h2>
+                <div class="caixa destaque">
+                    <h2>Destaque</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <h3>Nova Legislação Tecnologica</h3>
+                        <img class="imagem-principal" src="./imagens/tecnologia.jpg" alt="Taxis" width="100%">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        </p>
+                        <a href="">Leia mais!</a>
                     </div>
                 </div>
+
+                <div class="caixa">
+                    <h2>Mundo</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div><!-- FIM DO CONTEÚDO PRIMARIO -->
-            
+
             <!-- INICIO DO CONTEÚDO LATERAL -->
             <div id="lateral">
                 <div class="caixa">
                     <h2>Entrevistas</h2>
                     <div class="caixa-conteudo">
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
-                        Conteúdo <br>
+                        <ul>
+                            <li>
+                                <a href="">José Almeida</a>
+                            </li>
+                            <li>
+                                <a href="">Felipe Silva</a>
+                            </li>
+                            <li>
+                                <a href="">Renato Rodrigues</a>
+                            </li>
+                            <li>
+                                <a href="">Abelardo Silveira</a>
+                            </li>
+                            <li>
+                                <a href="">André Carlos</a>
+                            </li>
+                            <li>
+                                <a href="">Márcia Mello</a>
+                            </li>
+                            <li>
+                                <a href="">João Pedro</a>
+                            </li>
+                            <li>
+                                <a href="">Fernando Weiss</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+
+                <div class="caixa">
+                    <h2>News</h2>
+                    <div class="caixa-conteudo">
+                        
+                        <form>
+                            <div>
+                                <label for="email">E-mail:</label>
+                                <input type="text" name="email" id="email" placeholder="E-mail">
+                            </div>
+                            <div>
+                                <input class="submit" type="submit" value="Cadastrar">
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+
             </div><!-- FIM DO CONTEÚDO LATERAL -->
 
         </div><!-- FIM DO CONTEÚDO -->
