--- a/fotos.html
+++ b/fotos.html
@@ -13,7 +13,10 @@
 
 <body id="uma-coluna" class="fotos">
 
+    <!-- INICIO DO CONTAINER -->
     <div id="container">
+
+        <!-- INICIO DO CABEÇALHO -->
         <div id="cabecalho">
             <h1 class="logo">Notícias Cidade</h1>
             <ul id="navegacao">
@@ -39,16 +42,74 @@
                     <a id="fotos" href="fotos.html">Fotos</a>
                 </li>
             </ul>
-        </div>
+        </div><!-- FIM DO CABEÇALHO -->
 
         <!-- INICIO DO CONTEÚDO -->
         <div id="conteudo">
 
-            <div id="primario">Primário</div>
-            
+            <!-- INICIO DO CONTEÚDO PRIMARIO -->
+            <div id="primario">
+                <div class="caixa destaque">
+                    <h2>Destaque</h2>
+                    <div class="caixa-conteudo">
+                        <h3>O impacto do aquecimento global</h3>
+                        <img class="imagem-principal" src="./imagens/cidade.jpg" alt="Taxis" width="100%">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        </p>
+                        <a href="">Leia mais!</a>
+                    </div>
+                </div>
+
+                <div class="caixa">
+                    <h2>Mundo</h2>
+                    <div class="caixa-conteudo">
+                        <ul id="lista-noticias">
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="./imagens/tecnologia.jpg" alt="tecnologia" width="80">
+                                    <h3>Novas Tecnologias</h3>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    </p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div><!-- FIM DO CONTEÚDO PRIMARIO -->
+
         </div><!-- FIM DO CONTEÚDO -->
 
-    </div>
+    </div><!-- FIM DO CONTAINER -->
 
     <div id="container-rodape" style="clear: both;">
         <div id="rodape">
